render fast track web check

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body, input[type="text"], option, select
     margin-top: 3%;
 }
 
-.paymentDetails {
+.upsalesSection {
     margin-bottom: 5%;
 }
 
