--- a/src/components/Master/AirUpsales/Preseat/preseat.css
+++ b/src/components/Master/AirUpsales/Preseat/preseat.css
@@ -1,52 +1,74 @@
-#preSeat {
-    margin-top: 5%;
-}
-
-.seatButton {
+.seatBtn {
     padding: 4px;
     font-size: 12px;
     margin: 5px;
     height: 32px;
     width: 35px;
-}
-
-.seatNotAllowed {
-    background-color: red;
-    color: white;
-    pointer-events: none;
-}
-
-.seatChosen {
+  }
+  
+  .seatLegRoom {
+    background-color: #ff0066;
+  }
+  
+  .seatChosen {
     background-color: yellow;
     color: black;
     pointer-events: none;
-}
-
-.seatNotAvailable {
+  }
+  
+  .seatNotAvailable {
     background-color: #efefef;
     color: white;
     pointer-events: none;
-
-}
-
-
-.segmentSeat {
-    margin-top: 1%;
-}
-
-
-.selectedTrigger {
-    background-color: #4844ff;
-
-}
-
-
-#seatRowsElement {
-    margin-top: 1%;
-}
-
-.seatNumber {
-    margin-left: 1%;
-    margin-right: 1%;
-
-}
+  }
+  
+  .seatNotExists {
+    background-color: white;
+    color: white;
+    pointer-events: none;
+    border:none;
+  }
+  
+  .emergegencyExit {
+    height: 45px;
+  }
+  
+  .emergencyLeft {
+    border-left: 4px solid red;
+  }
+  
+  .emergencyRight {
+    border-right: 4px solid red;
+  }
+  
+  .seatBtn:hover {
+    background-color: green;
+    color: red;
+    font-size: 25px;
+    height: 42px;
+    width: 45px;
+  }
+  
+  .seatsHorRow {
+    width: 90%;
+  }
+  
+  .row-number {
+    font-size: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 9px;
+  }
+  
+  .segmentMap {
+    margin-top: 15px;
+  }
+  
+  .selectPaxBtn {
+    margin-right: 15px;
+  }
+  
+  
+  #selectors {
+    margin-bottom: 15px;
+  }
