--- a/src/index.css
+++ b/src/index.css
@@ -185,5 +185,14 @@ body { padding: 40px; }
 
 
 .radioInvoiceOption {
-    
+    margin-bottom:15px;
+    border: 1px solid black;
+    background-color: #007bff;
+    color:black;
+    padding:15px;
+    padding-left:25px;
+    text-align: center;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
