credit card translation

--- a/src/index.css
+++ b/src/index.css
@@ -196,3 +196,8 @@ body { padding: 40px; }
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
+
+#creditCard {
+    margin-bottom: 35px;
+}
